# eyeofsauron

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  eyeofsauron.code-workspace  meson.build
.github/workflows/: CI.yaml
data/: com.github.wwmm.eyeofsauron.desktop.in  eyeofsauron.gresource.xml  meson.build
data/schemas/: com.github.wwmm.eyeofsauron.gschema.xml  com.github.wwmm.eyeofsauron.soundwave.gschema.xml  com.github.wwmm.eyeofsauron.tracker.gschema.xml
data/ui/: application_window.ui  chart.ui  factory_webcam_dropdown.ui  preferences_general.ui  shortcuts.ui  sound_wave.glade  tracker.ui  webcam.ui
images/: latex_preamble.tex
po/: POTFILES.in  eye_of_sauron.pot  eyeofsauron.pot  pt_BR.po
po/pt_BR/: eyeofsauron.po
src/: CMakeLists.txt  application.cpp  application.hpp  application_ui.cpp  application_ui.hpp  chart.cpp  chart.hpp  colors.hpp  eye_of_sauron.cpp  frame_source.cpp  frame_source.hpp  io_device.cpp  io_device.hpp  main.cpp  meson.build  microphone.cpp  microphone.hpp  preferences_general.cpp  preferences_general.hpp  preferences_window.cpp  preferences_window.hpp  resources.qrc  sound_wave.cpp  sound_wave.hpp  tags_app.hpp  tags_resources.hpp  tracker.cpp  tracker.hpp  ui_helpers.cpp  ui_helpers.hpp  util.cpp  util.hpp  webcam.cpp  webcam.hpp  webcam_ui.cpp  webcam_ui.hpp
src/contents/: CMakeLists.txt  com.github.wwmm.eyeofsauron.desktop  com.github.wwmm.eyeofsauron.desktop.template
src/contents/icons/: credits.txt
src/contents/kcfg/: cfg_window.kcfg  eyeofsauron_db.kcfg  eyeofsauron_db.kcfgc
src/contents/ui/: ChartMouseArea.qml  EoSComboBox.qml  PreferencesPage.qml  SoundWave.qml  SourceMenu.qml  Tracker.qml  main.qml
util/: environmental_variables.sh  extract-translation-messages.sh
